chore: fix website contrast issue with inline code in markdown (#7147)

--- a/sites/website/src/css/custom.css
+++ b/sites/website/src/css/custom.css
@@ -330,6 +330,10 @@ html[data-theme="light"] {
     --ifm-breadcrumb-color-active: var(--ifm-link-color);
 }
 
+code {
+    background: transparent;
+}
+
 a code {
     --ifm-link-color: #ff5ac4;
 }
